fix styling issue being too close to '×' remove button

--- a/sass/layout/_post.scss
+++ b/sass/layout/_post.scss
@@ -1276,6 +1276,10 @@
         width: 100%;
         word-wrap: break-word;
 
+        &.post--ephemeral {
+            padding-right: 20px !important;
+        }
+
         div {
         }
 
